--- a/practice/src/app/note-list/note-list.html
+++ b/practice/src/app/note-list/note-list.html
@@ -2,12 +2,14 @@
     <thead>
         <th>Title</th>
         <th>Create Date</th>
+        <th>Action</th>
     </thead>
     <tbody>
         @for(note of notes(); track note.id){
             <tr [class]="{'important': note.isImportant}">
                 <td>{{ getTitle(note.title) }}</td>
                 <td>{{ note.createDate | date: 'dd/MM/yyyy' }}</td>
+                <td><a [routerLink]="[note.id, 'edit']">Edit</a></td>
             </tr>
         }
     </tbody>
