--- a/practice/src/app/edit-note/edit-note.html
+++ b/practice/src/app/edit-note/edit-note.html
@@ -1,1 +1,20 @@
 <h3>Edit Note</h3>
+
+<form [formGroup]="form">
+
+    <div class="form-item">
+        <input formControlName="title" placeholder="Title" />
+    </div>
+    <div class="form-item">
+        <textarea formControlName="content" placeholder="Content"></textarea>
+    </div>
+    <div class="form-item">
+        <label for="lbl-important"> Is important</label>
+            <input type="checkbox" formControlName="isImportant" id="lbl-important" />
+    </div>
+    <div class="button">
+        <button>Save</button>
+        <button>Cancel</button>
+    </div>
+
+</form>
