--- a/practice/src/app/edit-note/edit-note.html
+++ b/practice/src/app/edit-note/edit-note.html
@@ -1,6 +1,6 @@
 <h3>Edit Note</h3>
 
-<form [formGroup]="form">
+<form [formGroup]="form" (ngSubmit)="onSave()">
 
     <div class="form-item">
         <input formControlName="title" placeholder="Title" />
@@ -14,7 +14,7 @@
     </div>
     <div class="button">
         <button>Save</button>
-        <button>Cancel</button>
+        <button (click)="onCancel()">Cancel</button>
     </div>
 
 </form>
